Test/String/Contains.expected
Test/String/Contains.lean:4:2: error: cannot translate fun x => x == 'a', SMT-LIB does not support lambdas
